# ctfr

./: .gitignore  .readthedocs.yaml  ADDING_METHODS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  script.sh  setup.cfg  setup.py
.github/workflows/: build.yml  build_wheels.yml  release.yml  workflow.yml
docs/: Makefile  adding_methods.rst  conf.py  ctfr.core.rst  ctfr.methods.implementations.rst  ctfr.methods.rst  ctfr.rst  ctfr.utils.rst  index.rst  ipynb_to_gallery.py  modules.rst  requirements.txt  sg_execution_times.rst
docs/api/: api.rst  exception.rst  index.rst  meta.rst  util.rst  warning.rst
docs/api/core/: ctfr.rst  ctfr_from_specs.rst  index.rst
docs/combination_methods/: binwise.rst  fls.rst  index.rst  lt.rst  swgm.rst
docs/combination_methods/binwise/: calling.rst  further_reading.rst  index.rst
docs/combination_methods/fls/: calling.rst  further_reading.rst  index.rst
docs/combination_methods/lt/: calling.rst  further_reading.rst  index.rst
docs/combination_methods/sls/: calling.rst  further_reading.rst  index.rst
docs/combination_methods/swgm/: calling.rst  further_reading.rst  index.rst
docs/conf_extras/: combination_methods_doc.py  gallery_gen.py
docs/examples/: GALLERY_HEADER.rst
docs/examples/output/: basic_usage.codeobj.json  basic_usage.ipynb  basic_usage.py  basic_usage.py.md5  basic_usage.rst  index.rst  sg_execution_times.rst
docs/gallery_examples/: basic_usage.codeobj.json  basic_usage.ipynb  basic_usage.py  basic_usage.py.md5  basic_usage.rst  index.rst  sg_execution_times.rst
docs/getting_started/: index.rst  installation.rst
docs/getting_started/examples/: GALLERY_HEADER.rst
docs/scripts/: combination_parameters_doc.py  ipynb_to_gallery.py
evaluating/: notebook.ipynb  plots.ipynb  script.py
examples/: basic.ipynb  basic_usage.ipynb
examples/audio/: .gitignore
notebooks/: plots.ipynb
running_time/: script.py
scripts/: benchmarks.py
src/ctfr/: __init__.py  data.py  exception.py  meta.py  methods_dict.py  warning.py
src/ctfr/core/: ctfr.py  ctfr_from_specs.py
src/ctfr/implementations/: baseline_fls_cy.pyx  baseline_lt_cy.pyx  baseline_sls_cy.pyx  baseline_swgm_cy.pyx  binwise_np.py  fls_cy.pyx  lt_cy.pyx  sls_cy.pyx  sls_h_cy.pyx  sls_i_cy.pyx  swgm_cy.pyx
src/ctfr/methods/: methods_utils.py
src/ctfr/utils/: __init__.py  arguments_check.py  audio.py  data.py  external.py  internal.py  methods.py  private.py
src/tfrc/: __init__.py  exception.py  meta.py  temp.py  utils.py  warning.py
src/tfrc/core/: __init__.py  tfrc.py
src/tfrc/methods/: __init__.py  fls_cy.c  fls_cy.pyx  lt_cy.pyx  methods.py  methods_dict.py  methods_util.py  methods_utils.py  swgm_cy.c  swgm_cy.pyx
src/tfrc/utils/: __init__.py  external.py  internal.py
test/: test_basics.py  test_temp.py
tests/: __init__.py  test_methods_parameters_validation.py  test_temp.py
tests/data/: make.py  sample_stft_specs.json
tests/methods/: base.py  test_binwise_np.py  test_fls.py  test_gmean.py  test_hmean.py  test_lt.py  test_mean.py  test_min.py  test_sls_h.py  test_sls_i.py  test_swgm.py
tests/methods/binwise_np/: test_binwise_np.py
tests/methods/fls/: test_fls.py
tests/utils/: base.py  data_loader.py
(+14 files in other folders)
